--- a/components/Timeline.module.scss
+++ b/components/Timeline.module.scss
@@ -1,16 +1,29 @@
-.timeline {
-    display: flex;
-    width: 100%;
-    border-bottom: 1px solid saddlebrown;
-    position: relative;
-    height: 1px;
+.container {
+    background: url(https://garden.bradwoods.io/images/noise.webp),
+        linear-gradient(
+            to bottm right,
+            hsla(0, 0%, 0%, 0) 40%,
+            hsla(0, 0%, 0%, 1)
+        );
+    cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>👋</text></svg>")
+            16 0,
+        auto; /*!emojicursor.app*/
+    margin-inline: -2.5rem;
+    padding: 1rem 2rem;
+    background: hsl(40, 35%, 76%);
 
-    .dot {
+    button {
+        background-color: gray;
+        border: transparent;
+        cursor: pointer;
+        color: white;
+        display: block;
+        margin: auto;
+        font-size: 1.1rem;
         position: relative;
-        width: 10px;
-        height: 10px;
-        background-color: saddlebrown;
-        border-radius: 50%;
-        top: -4px;
+        padding: 7px 14px;
+        border-radius: 24px;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+        z-index: 999;
     }
 }
