--- a/components/PhotoAlbum.module.scss
+++ b/components/PhotoAlbum.module.scss
@@ -1,40 +1,37 @@
 .inner {
-    background: url(https://garden.bradwoods.io/images/noise.webp),
-        linear-gradient(
-            to bottm right,
-            hsla(0, 0%, 0%, 0) 40%,
-            hsla(0, 0%, 0%, 1)
-        );
-    cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>👋</text></svg>")
-            16 0,
-        auto; /*!emojicursor.app*/
-    margin-inline: -2.5rem;
-    padding: 1rem 2rem;
-    background: hsl(40, 35%, 76%);
-    position: relative;
-    overflow: hidden;
-    min-height: 100vh;
+  background: url(https://garden.bradwoods.io/images/noise.webp),
+    linear-gradient(to bottm right, hsla(0, 0%, 0%, 0) 40%, hsla(0, 0%, 0%, 1));
+  cursor:
+    url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>👋</text></svg>")
+      16 0,
+    auto; /*!emojicursor.app*/
+  margin-inline: -2.5rem;
+  padding: 1rem 2rem;
+  background: hsl(40, 35%, 76%);
+  position: relative;
+  overflow: hidden;
+  min-height: 100vh;
 
-    button {
-        background-color: gray;
-        border: transparent;
-        cursor: pointer;
-        color: white;
-        display: block;
-        margin: auto;
-        font-size: 1.1rem;
-        position: relative;
-        padding: 7px 14px;
-        border-radius: 24px;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
-        z-index: 999;
-    }
+  button {
+    background-color: gray;
+    border: transparent;
+    cursor: pointer;
+    color: white;
+    display: block;
+    margin: auto;
+    font-size: 1.1rem;
+    position: relative;
+    padding: 7px 14px;
+    border-radius: 24px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+    z-index: 999;
+  }
 }
 
 .polaroid {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
-    max-width: 50%;
-    position: absolute;
-    background-color: white;
-    padding: 7px 7px 28px 7px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+  max-width: 50%;
+  position: absolute;
+  background-color: white;
+  padding: 7px 7px 28px 7px;
 }
