--- a/components/Timeline.module.scss
+++ b/components/Timeline.module.scss
@@ -1,29 +1,72 @@
 .container {
-    background: url(https://garden.bradwoods.io/images/noise.webp),
-        linear-gradient(
-            to bottm right,
-            hsla(0, 0%, 0%, 0) 40%,
-            hsla(0, 0%, 0%, 1)
-        );
-    cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>👋</text></svg>")
-            16 0,
-        auto; /*!emojicursor.app*/
-    margin-inline: -2.5rem;
-    padding: 1rem 2rem;
-    background: hsl(40, 35%, 76%);
+  background: url(https://garden.bradwoods.io/images/noise.webp),
+    linear-gradient(to bottm right, hsla(0, 0%, 0%, 0) 40%, hsla(0, 0%, 0%, 1));
+  cursor:
+    url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>🖱️</text></svg>")
+      16 0,
+    auto; /*!emojicursor.app*/
+  margin-inline: -2.5rem;
+  padding: 1rem 2rem;
+  background: hsl(40, 35%, 76%);
+  position: relative;
+  z-index: 1;
+  max-height: calc(4rem + 28px + 60vh);
 
-    button {
-        background-color: gray;
-        border: transparent;
-        cursor: pointer;
-        color: white;
-        display: block;
-        margin: auto;
-        font-size: 1.1rem;
-        position: relative;
-        padding: 7px 14px;
-        border-radius: 24px;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
-        z-index: 999;
-    }
+  &::before {
+    content: '';
+    background-color: red;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    transform: skew(5deg);
+  }
+
+  button {
+    background-color: gray;
+    border: transparent;
+    cursor: pointer;
+    color: white;
+    display: block;
+    margin: auto;
+    font-size: 1.1rem;
+    position: relative;
+    padding: 7px 14px;
+    border-radius: 24px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
+  }
+}
+
+.timeline {
+  display: flex;
+  gap: 14px;
+  align-items: flex-start;
+  overflow-y: hidden;
+}
+
+.info {
+  flex-shrink: 0;
+  font-family: var(--font-sans);
+  font-size: 0.995rem;
+  max-width: 50%;
+  max-height: 60vh;
+  padding: 1rem 2rem;
+  overflow: hidden;
+  transition: all 0.1s;
+  position: relative;
+  z-index: 99;
+
+  h2 {
+    border-bottom-style: dashed;
+  }
+
+  * {
+    mix-blend-mode: difference;
+    user-select: none;
+  }
+
+  &:hover {
+    overflow-y: auto;
+  }
 }
