--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -10,8 +10,11 @@ html {
   margin: 0;
   padding: 0;
   height: 100%;
-  overflow-x: clip;
   scroll-behavior: smooth;
+
+  @media screen and (min-width: 576.98px) {
+    overflow-x: clip;
+  }
 }
 
 a {
